# blindfold-env

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/blindfold/: cli.py  env_file.py  installer.py  mcp_server.py  secret_input.py
src/blindfold/assets/: icon.icns
templates/: claude_md_project.md  settings_deny.json  skill.md
tests/: test_cli.py  test_env_file.py  test_installer.py  test_mcp_server.py  test_secret_input.py
