[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "blindfold-env"
version = "0.1.0"
description = "A CLI tool that manages .env files on behalf of AI assistants without exposing secret values."
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.scripts]
blindfold = "blindfold.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blindfold = ["../templates/*"]
